group "co.nvqa"
version "2.0.0"
apply plugin: "java"

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile project(":commons")
    testCompile project(":common-selenium")

    testCompile "ch.qos.logback:logback-classic:1.2.3"

    testCompile "org.apache.poi:poi-ooxml:3.17"
}

project.ext {
    cucumberGluePackage = ["co.nvqa.operator_v2.cucumber.glue", "classpath:co.nvqa.commons.cucumber.glue"]
}

apply from: "commons/build-commons.gradle"
